// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberSlider Snapshots custom max 1`] = `
<div
  className="objectlist-row objectlist-current-filter__active-status"
>
  <input
    className="objectlist-input objectlist-input__number-slider--number"
    max={2000}
    min={0}
    onChange={[Function]}
    step={0.1}
    type="number"
    value="50.0"
  />
  <input
    className="objectlist-input__number-slider--slider"
    max={2000}
    min={0}
    onChange={[Function]}
    onMouseUp={[Function]}
    step="any"
    type="range"
    value={50}
  />
</div>
`;

exports[`NumberSlider Snapshots custom min 1`] = `
<div
  className="objectlist-row objectlist-current-filter__active-status"
>
  <input
    className="objectlist-input objectlist-input__number-slider--number"
    max={100}
    min={30}
    onChange={[Function]}
    step={0.1}
    type="number"
    value="50.0"
  />
  <input
    className="objectlist-input__number-slider--slider"
    max={100}
    min={30}
    onChange={[Function]}
    onMouseUp={[Function]}
    step="any"
    type="range"
    value={50}
  />
</div>
`;

exports[`NumberSlider Snapshots renders default 1`] = `
<div
  className="objectlist-row objectlist-current-filter__active-status"
>
  <input
    className="objectlist-input objectlist-input__number-slider--number"
    max={100}
    min={0}
    onChange={[Function]}
    step={0.1}
    type="number"
    value="50.0"
  />
  <input
    className="objectlist-input__number-slider--slider"
    max={100}
    min={0}
    onChange={[Function]}
    onMouseUp={[Function]}
    step="any"
    type="range"
    value={50}
  />
</div>
`;
